# GuessingGame

./: GuessingGame.cabal  LICENSE  README.md  stack.yaml
app/: GuessClient.hs  GuessServer.hs
src/: Client.hs  Server.hs
