name:                GuessingGame
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Tientuine/GuessingGame#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew A Johnson
maintainer:          Matt.Johnson@marist.edu
copyright:           2018 Matthew A Johnson
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client,Server
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , json
                     , http-server >= 1.0.6
                     , network-uri >= 2.6.1
                     , utf8-string
                     , HTTP
  default-language:    Haskell2010

executable GuessingGame-Server
  hs-source-dirs:      app
  main-is:             GuessServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , GuessingGame
  default-language:    Haskell2010

executable GuessingGame-Client
  hs-source-dirs:      app
  main-is:             GuessClient.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network-uri
                     , GuessingGame
  default-language:    Haskell2010

test-suite GuessingGame-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , GuessingGame
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tientuine/GuessingGame
